--- a/app/sass/base/_fonts.sass
+++ b/app/sass/base/_fonts.sass
@@ -1,4 +1,4 @@
-@import "_mixins/font-face"
+@import "mixins/font-face"
 
 +font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
 +font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
