--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,43 +1,18 @@
-@import "vars"
-@import "fonts"
-@import "libs"
+// Базовые настройки
+@import "base/vars/vars"
+@import "base/fonts"
+@import "base/settings"
 
-::placeholder
-	color: #666
+// Сторонние библиотеки
+@import "libs/libs"
 
-::selection
-	background-color: $accent
-	color: #fff
+// Блоки
+@import "blocks/buttons/submit"
+@import "blocks/header"
+@import "blocks/footer"
 
-body
-	font-size: 16px
-	min-width: 320px
-	position: relative
-	line-height: 1.65
-	font-family: $default-font
-	overflow-x: hidden
-	color: $text
-	input, textarea
-		border: #666 1px solid
-		outline: none
-		&:focus:required:invalid
-			border-color: red
-		&:required:valid
-			border-color: green
-
-.img-responsive
-	display: block
-	max-width: 100%
-	height: auto
-	&.img-width
-		width: 100%
-
-.text-center
-	text-align: center
-
-b, strong
-	font-weight: bold
-
+// Страницы
+@import "pages/index"
 
 
 @import "media" // Always at the end
